<resources>
    <string-array name="numberOfPeopleArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="app_name">HitchHike</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="description">Description:</string>
    <string name="no_of_people">No. of People:</string>
    <string name="userType">User Type:</string>
    <string name="save">Save</string>
    <string name="hint_pick_up_date">dd/mm/yyyy</string>
    <string name="hint_pick_up_time">hh:mm</string>
</resources>